force-app/main/default/objects/OT_Rule__c/OT_Rule__c.object-meta.xml
<CustomObject>
    <label>Opportunity Team Rule</label>
    <nameField>
        <label>Opportunity Team Engine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Team Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>