force-app/main/default/objects/OT_Rule__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <formula>IF(OR(Object_Name__c == &apos;Account&apos;,Object_Name__c == &apos;Owner&apos;) , Object_Name__c+&quot;.&quot;+Field_Name__c, Field_Name__c)</formula>
    <label>Field API Name</label>
    <type>Text</type>
</CustomField>