force-app/main/default/objects/OT_Rule__c/fields/Field_Operator__c.field-meta.xml
<CustomField>
    <fullName>Field_Operator__c</fullName>
    <label>Field Operator</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>