force-app/main/default/objects/OT_Rule__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>TextArea</type>
</CustomField>