force-app/main/default/objects/OT_Rule__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <label>Field Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>