force-app/main/default/objects/OT_Rule__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>