force-app/main/default/objects/OT_Rule__c/fields/OT_Member__c.field-meta.xml
<CustomField>
    <fullName>OT_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Team Member</label>
    <referenceTo>OT_Member__c</referenceTo>
    <relationshipLabel>Opportunity Team Rules</relationshipLabel>
    <relationshipName>Opportunity_Team_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>