force-app/main/default/objects/OT_Rule__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <formula>IF(Object_Name__c == &#39;OpportunityLineItem&#39;, &#39; OpportunityLineItems&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Name</label>
    <type>Text</type>
</CustomField>